FIG-33065: fix close button height on mobile

--- a/packages/ui/overlay/header/overlayHeader.css
+++ b/packages/ui/overlay/header/overlayHeader.css
@@ -52,6 +52,5 @@
 
   @media (max-width: 1023px) {
     width: calc(8 * var(--gridSize));
-    height: calc(8 * var(--gridSize));
   }
 }
